ternary operator all finished

--- a/756004794_3_decaf_PA2/.settings/org.eclipse.core.resources.prefs
+++ b/756004794_3_decaf_PA2/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
 encoding//TestCases/S2/runAll.py=utf-8
+encoding//src/decaf/error/IncompatTerOpError.java=UTF-8
 encoding//src/decaf/frontend/Lexer.l=UTF-8
 encoding//src/decaf/frontend/Parser.y=UTF-8
