--- a/756004794_3_decaf_PA2/.settings/org.eclipse.core.resources.prefs
+++ b/756004794_3_decaf_PA2/.settings/org.eclipse.core.resources.prefs
@@ -3,6 +3,7 @@ encoding//TestCases/S2/runAll.py=utf-8
 encoding//src/decaf/error/BadCaseLabelError.java=UTF-8
 encoding//src/decaf/error/BadSwitchVarError.java=UTF-8
 encoding//src/decaf/error/BadTestExpr.java=UTF-8
+encoding//src/decaf/error/ContinueOutOfLoopError.java=UTF-8
 encoding//src/decaf/error/IncompatTerOpError.java=UTF-8
 encoding//src/decaf/frontend/BaseParser.java=UTF-8
 encoding//src/decaf/frontend/Lexer.l=UTF-8
